[배지현] - 로그인 화면 레이아웃 완성 - build.gradle 레이아웃, 타임리프 기능 추가 - 기본 구성 화면 (header footer menu) layout/ fragments package로 분리하여 layout thymeleaf 로 변경 #2

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,10 @@
 
 
 #wrap{
+	/*
 	width:1500px;
 	height:1000px;
+	*/
 	margin: 0 auto;
 }
 
@@ -13,12 +15,13 @@
 .noto-sans-kr {
   font-family: "Noto Sans KR", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
+
 .black-han-sans-regular {
   font-family: "Black Han Sans", serif;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -31,7 +34,6 @@ header{
 .logo{
 width: 288px;
 height: 93px;
-	/* 누누북스 
 
 
 
@@ -45,10 +47,9 @@ align-items: center;
 text-align: center;
 
 color: #7CC491;
+-webkit-text-stroke-width: 3px;
+-webkit-text-stroke-color: #1F7B3B;
 
-border: 3px solid #1F7B3B;
-
-	*/
 	
 }
 
@@ -76,6 +77,27 @@ border: 3px solid #1F7B3B;
 	height: 750px;
 }
 
+.login-info {
+	width:270px;
+	height:50px;
+	background-color: #F4FFF8;
+	align-items: center;
+	font-weight: bolder;
+}
+
+.contents > .input-box {
+	
+	width: 640px;
+ 	margin-top:80px;
+}
+
+
+.outline{
+	border:solid 1px #E7E5E5;
+	padding: 4% 10%;
+	/*위 오른족 아래 왼쪽 */
+	/* 세로방향 | 가로방향 */
+}
 
 footer{
 	color:#797979;
