--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,74 +1,53 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>누누북스</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body>
+<html lang="ko" 
+    xmlns:th="http://www.thymeleaf.org" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     layout:decorate="~{layout/default}">
+     
 
-	<div id="wrap" class="noto-sans-kr ">
-	
-		<header>
-			<div class="mt-3 text-right"> <!-- 정보  관리 버튼 -->
-					<a href="#" class="text-dark mr-2">로그인</a>
-					<a href="#" class="text-dark mr-2">회원가입</a>
-					<a href="#" class="text-dark mr-2">장바구니</a>
-					<a href="#" class="text-dark mr-2">마이페이지</a>
-					<a href="#" class="text-dark mr-4">고객센터</a>
-			</div>
-				
-			<div class="d-flex align-items-center justify-content-between bg-secondary">
-					<div class="logo bg-danger text-center"><!-- 로고 -->
-					누누북스
+		<section layout:fragment="contents" class="contents d-flex justify-content-center">
+		
+			<div class="input-box"> <!--  로그인 box 전체 div -->
+			
+				<div class="login-info border border-dark border-bottom-0  d-flex justify-content-center">
+				회원 로그인
+				</div>
+				<div class="outline">
+					<input type="text" class="form-control mt-3" placeholder="아이디">
+					<input type="password" class="form-control mt-3" placeholder="비밀번호">
+					<div class="mt-3 d-flex justify-content-between">
+						<label><input type="checkbox" checked>아이디 저장</label>
+						<label class="ml-3"><input type="checkbox" checked>로그인 상태 유지</label>
 					</div>
-					<!--  검색버튼 -->
-					<div class="bg-primary">
-						<div class="d-flex search-bar align-items-center ml-3 border border-dark rounded-pill">
-							<button type="button" class="btn border-0  m-2">
-								<i class="search-icons bi bi-list"></i>
-							</button>
-							<input type="search" class="search-tab form-control border-0" placeholder="이시간 가장 인기있는 도서는?">
-							<button type="button" class="btn border-0 m-2">
-								<i class="search-icons bi bi-search"></i>
-							</button>
+					<button type="button" class="btn btn-primary w-100 mt-3">로그인</button>
+					<div class="d-flex justify-content-between m-3">
+						<div>
+							<a href="#" class="text-dark mr-3">아이디 찾기</a>
+							<a href="#" class="text-dark">비밀번호 찾기</a>
 						</div>
+					<div>
+					<a href="#" class="text-dark mr-3">회원가입</a>
+					</div>
+					</div>
+				</div>
+				<div class="text-center outline h-25">
+				간편 로그인창
 				</div>
 			</div>
-			
-		</header>
-		<nav class="menu navbar">
-			<ul class="nav nav-pills">
-				<li class="nav-item mr-4 ml-2"><a class="search-icons bi bi-list font-weight-bold h4" href="#" style="color:#1B9A41"></a></li>
-				<li class="nav-item mr-4"><a href="#" style="color:#1B9A41">국내도서</a></li>
-				<li class="nav-item mr-4"><a href="#" style="color:#1B9A41">해외도서</a></li>
-				<li class="nav-item mr-4"><a href="#" style="color:#1B9A41">베스트셀러</a></li>
-				<li class="nav-item"><a href="#" style="color:#1B9A41">eBook</a></li>
-			</ul>
-		</nav>
-		<section class="contents bg-warning">
+		
+		
+		
 		
 		</section>
 		
-		<footer class="d-flex align-items-center justify-content-center">
-			<div>COPYRIGHT © nunuBooks INC. ALL RIGHTS RESERVED.</div>
-		</footer>
+
 		
-	</div>
 
 
 
 
 
 
+<script layout:fragment="script"></script>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-</body>
 </html>
