--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,7 +42,6 @@ font-style: normal;
 font-weight: 400;
 font-size: 64px;
 line-height: 80px;
-display: flex;
 align-items: center;
 text-align: center;
 
@@ -85,6 +84,14 @@ color: #7CC491;
 	font-weight: bolder;
 }
 
+
+.join-info {
+	width:270px;
+	height:50px;
+	font-weight: bolder;
+	text-align: center;
+}
+
 .contents > .input-box {
 	
 	width: 640px;
@@ -95,7 +102,6 @@ color: #7CC491;
 .outline{
 	border:solid 1px #E7E5E5;
 	padding: 4% 10%;
-	/*위 오른족 아래 왼쪽 */
 	/* 세로방향 | 가로방향 */
 }
 
