--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -9,7 +9,7 @@
 		
 			<div class="input-box"> <!--  로그인 box 전체 div -->
 			
-				<div class="login-info border border-dark border-bottom-0  d-flex justify-content-center">
+				<div class="info-btn btn-lgn border border-dark border-bottom-0  d-flex align-items-center justify-content-center">
 				회원 로그인
 				</div>
 				<div class="outline">
