[배지현] - 하단 버튼 추가 #3

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -133,6 +133,10 @@
 				
 				</div>
 			</div>
+				<div class="d-flex align-items-center justify-content-around my-4">
+					<button type="button" class="btn btn-danger col-3">이전화면</button>
+					<button type="button" class="btn btn-primary col-3">회원가입하기</button>
+				</div>
 			
 			
 			
