[배지현] - 헤더 로그인/ 회원가입 href 추가 - sign-up class 수정 #3

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -52,6 +52,10 @@ color: #7CC491;
 	
 }
 
+.logo-color{
+color: #7CC491;
+	
+}
 
 .search-bar{
 	width:540px;
@@ -77,6 +81,11 @@ color: #7CC491;
 	color:#1B9A41;
 }
 
+
+.join-ad{
+	height:120px;
+	background-color : #FEF9F9"
+}
 
 .banner {
 	
