--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 		<header>
 			<div class="mt-3 text-right"> <!-- 정보  관리 버튼 -->
-					<a href="#" class="text-dark mr-2">로그인</a>
-					<a href="#" class="text-dark mr-2">회원가입</a>
+					<a href="/nunubooks/account/login" class="text-dark mr-2">로그인</a>
+					<a href="/nunubooks/account/sign-up" class="text-dark mr-2">회원가입</a>
 					<a href="#" class="text-dark mr-2">장바구니</a>
 					<a href="#" class="text-dark mr-2">마이페이지</a>
 					<a href="#" class="text-dark mr-4">고객센터</a>
