--- a/src/main/resources/templates/books/main.html
+++ b/src/main/resources/templates/books/main.html
@@ -5,14 +5,28 @@
      layout:decorate="~{layout/default}">
      
 
-		<section layout:fragment="contents" class="contents d-flex justify-content-center">
-		<div class="bg-warning banner"><!-- banner -->
-			<div>
-				<img alt="추천 동화 10선 "src="/static/image/teddy.jpg">
-			</div>
-		
-		</div>
-		
+		<section layout:fragment="contents" class="container">
+				<div class="bg-warning banner d-flex justify-content-around"><!-- banner -->
+					<div>
+						<img alt="추천 동화 10선 "src="/static/image/teddy.jpg" class="banner-image">
+						<span class="image-text">아가야들이 좋아하는 동화 10선</span>
+					</div>
+					<div>
+						<img src="/static/image/car.jpg" class="banner-image">
+						<span class="image-text">어쩌구 저쩌구 추천 30작</span>
+					</div>
+				
+				</div>
+				
+				<div class="d-flex my-4 justify-content-between"> 
+					<div class="bg-secondary seller-info">
+						<div>베스트셀러</div>
+					</div>
+					<div class="bg-warning seller-info">
+						<div>신간</div>
+					</div>
+				</div>
+				
 		
 		
 		</section>
