[배지현] - 장바구니 페이지 전체적인 틀 완성 - 책 정보 틀은 table로 시도해볼 것 - 책 전체 가격 , 주문 정보 틀 부분 수정하기 #9

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,16 +71,31 @@ color: #7CC491;
 }
 
 
+
+.contents{
+	width:1200px;
+	height: 750px;
+}
+
+
 .menu{
 	height:60px;
 	background-color: #F4FFF8;
 }	
-
+.order-menu{
+	
+	height:40px;
+	background-color: #F4FFF8;
+}
 .menu-text{
 	
 	color:#1B9A41;
 }
 
+.checkbox {
+	color:#65558F;
+	
+}
 
 .join-ad{
 	height:120px;
@@ -116,15 +131,6 @@ color: #7CC491;
 }
 
 
-
-
-
-	/*
-.contents{
-	height: 750px;
-}
-
-	*/
 .info-btn {
 	width:300px;
 	height:50px;
@@ -138,6 +144,13 @@ color: #7CC491;
 
 .btn-lgn{
 	background-color: #F4FFF8;
+}
+
+
+.cart-book-img{
+	width:90px;
+	height:120px;
+	object-fit: comtain;
 }
 
 
