[배지현] - booklist 화면 구성 #5

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -168,6 +168,10 @@ color: #7CC491;
  	margin-top:80px;
 }
 
+.book-info{
+	width:1000px;
+	height:180px;
+}
 
 .outline{
 	border:solid 1px #E7E5E5;
