--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -29,7 +29,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="order-menu w-100 mt-4 d-flex align-items-center justify-content-between">
+				<div class="order-menu w-100 my-4 d-flex align-items-center justify-content-between">
 					<div class="d-flex">
 						<i class="bi bi-check-circle-fill mx-3 h5 checkbox"></i>
 						<input type="checkbox" class="d-none">
@@ -58,7 +58,7 @@
 								<input type="checkbox" class="mx-3">
 								<img src="/static/image/car.jpg" class="cart-book-img">
 								<div class="mx-3">
-									<h5>책 제목 어쩌구저쩌구</h5>
+									<h5 class="font-weight-bold">책 제목 어쩌구저쩌구</h5>
 									<h6>(10%) 18,000 원 마일리지 얼마얼마</h6>
 								</div>
 								<div class="d-flex align-items-center justify-content-center bg-primary border">
@@ -88,7 +88,7 @@
 						
 					</div>
 					<div class="bg-warning col-4"> <!--  구매 정보 박스 -->
-						<div class="bg-danger">
+						<div class="bg-danger"> <!--  구매 정보 추가 수정 예정 (했으면 주석 지우기) -->
 						니가 산거 얼마고
 						배송비는 얼마고
 						할인은 이만큼 된다 
