--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -5,9 +5,12 @@
      layout:decorate="~{layout/default}">
      
 
-		<section layout:fragment="contents" class="contents d-flex justify-content-center">
+		<section layout:fragment="contents" class="d-flex justify-content-center">
 		
-			<div class="input-box"> <!--  로그인 box 전체 div -->
+			<div class="contents">
+			
+			
+			<div class="input-box mb-4"> <!--  로그인 box 전체 div -->
 			
 				<div class="info-btn btn-lgn border border-dark border-bottom-0  d-flex align-items-center justify-content-center">
 				회원 로그인
@@ -30,12 +33,12 @@
 					</div>
 					</div>
 				</div>
-				<div class="text-center outline h-25">
+				<div class="text-center outline h-50">
 				간편 로그인창
 				</div>
 			</div>
 		
-		
+		</div>
 		
 		
 		</section>
