[배지현] #3 - daum 주소 api 적용 - 중복확인 api 적용

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -66,9 +66,13 @@
 							 아이디
 							 <span class="text-primary">*</span>
 							 </th>
-							<td class="d-flex">
-								<input type="text" class="form-control" id="idInput">
-								<button type="button" class="btn btn-outline-secondary w-50 ml-2" id="dupBtn">중복 확인</button>
+							<td>
+								<div class="d-flex">
+									<input type="text" class="form-control" id="idInput">
+									<button type="button" class="btn btn-outline-secondary w-50 ml-2" id="dupBtn">중복 확인</button>
+								</div>
+								<div class="small text-danger d-none" id="dupText">중복된 아이디입니다</div>
+								<div class="small text-success d-none" id="availableText">사용가능한 아이디 입니다</div>
 							</td>
 						</tr>
 						<tr>
@@ -115,7 +119,7 @@
 							 </th>
 							<td>
 								<div class="d-flex">
-								<input type="text" class="form-control w-25"> <!-- 다음 주소 api 활용 -->
+								<input type="text" class="form-control w-25" id="postcode"> <!-- 다음 주소 api 활용 -->
 								<button type="button" class="btn btn-outline-secondary w-25 ml-2" id="postCodeBtn">우편번호 찾기</button>
 								</div>
 								<input type="text" class="form-control mt-2 w-75" placeholder="주소" id="address"> 
@@ -160,22 +164,120 @@
 
 
 
+<!--  얘 집어넣는 방법  생각하기 -->
 
-  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script layout:fragment="script">
 	
 	$(document).ready(function(){
 	
-		$("#signUpBtn").on("click",function(){
+		
+		var isDuplicateCheck = false; // 중복체크를 안했다가 default인 상태. 중복확인 여부를 판단
+		var isDuplicateId = true; // 중복검사를 했는데 중복일 때 
+		
+		
+		$("#dupBtn").on("click",function(){
+
+			alert("중복확인")
+			
+			let userId = $("#idInput").val();
+			
+			$.ajax({
+				type:"get"
+				,url:"/user/duplicate-id"
+				,data:{"userId":userId}
+				,success:function(response){
+					if(response.isDuplicate) { // 중복이면
+						$("#dupText").removeClass("d-none");
+						$("#availableText").addClass("d-none");
+						isDuplicateId =true;
+					}else{
+						$("#dupText").addClass("d-none");
+						$("#availableText").removeClass("d-none");
+						isDuplicateId = false;
+					}
+			}
+			, error:function(){
+				alert("중복확인 에러!!");
+			}	
+				
+						
+			
+		});
+		
+		
+		$("#postCodeBtn").on("click",function(){
 
 			
-			alert("클릭!"); 
+			new daum.Postcode({
+
+	            oncomplete: function(data) {
+	                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+	                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+	                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+	                var addr = ''; // 주소 변수
+	                var extraAddr = ''; // 참고항목 변수
+
+	                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+	                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+	                    addr = data.roadAddress;
+	                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+	                    addr = data.jibunAddress;
+	                }
+
+	                
+	                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+	                if(data.userSelectedType === 'R'){
+	                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+	                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+	                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+	                        extraAddr += data.bname;
+	                    }
+	                    // 건물명이 있고, 공동주택일 경우 추가한다.
+	                    if(data.buildingName !== '' && data.apartment === 'Y'){
+	                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+	                    }
+	                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+	                    if(extraAddr !== ''){
+	                        extraAddr = ' (' + extraAddr + ')';
+	                    } 
+	                } else {
+	                        document.getElementById("address").value = '';
+	                }
+	                    
+	                    
+	                // 우편번호와 주소 정보를 input 박스에 넣는다.
+	                document.getElementById('postcode').value = data.zonecode;
+	                document.getElementById("address").value = addr;
+	                document.getElementById("address").value += extraAddr;
+	                // 커서를 상세주소 필드로 이동한다.
+	                document.getElementById("detailAddress").focus();
+	            } 
+			// 자바문법 위랑 통일 시키기 
+	        
+			
+			
+	        }).open();
+			
+		
+		});
+		
+		
+		
+		
+		$("#signUpBtn").on("click",function(){
+
 			
 			let name = $("#nameInput").val();
 			let userId = $("#idInput").val();
 			let email = $("#emailInput").val();
 			let password = $("#passwordInput").val();
 			let passwordConfirm = $("#passwordConfirmInput").val();
+			
+			let postcode = $("#postcode").val();
+			let address = $("#address").val();
+			let detailAddress = $("#detailAddress").val();
+
 			
 			let phoneNumber1 = $("#phoneInput1").val();
 			let phoneNumber2 = $("#phoneInput2").val();
@@ -184,9 +286,7 @@
 			
 			let phoneNumber = phoneNumber1 + "" + phoneNumber2 + "" + phoneNumber3;
 			
-			
-			
-			alert(phoneNumber);
+			//alert(phoneNumber);
 			
 			if(name ==""){
 				alert("이름을 입력해주세요");
