[배지현] - 로그인 API 완성 - 회원가입, 로그인 성공시 연결되는 링크 반대로 되어 있던 것 수정 #2

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -370,7 +370,7 @@
 			,success:function(response){
 	
 				if(response.result == "success"){
-					location.href="/nunubooks/account/main";
+					location.href="/nunubooks/account/login";
 				} else{
 					alert("양식을 다시 확인해 주세요")
 				}
