--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -16,20 +16,20 @@
 				회원 로그인
 				</div>
 				<div class="outline">
-					<input type="text" class="form-control mt-3" placeholder="아이디">
-					<input type="password" class="form-control mt-3" placeholder="비밀번호">
+					<input type="text" class="form-control mt-3" placeholder="아이디" id="idInput">
+					<input type="password" class="form-control mt-3" placeholder="비밀번호" id="passwordInput">
 					<div class="mt-3 d-flex justify-content-between">
 						<label><input type="checkbox" checked>아이디 저장</label>
 						<label class="ml-3"><input type="checkbox" checked>로그인 상태 유지</label>
 					</div>
-					<button type="button" class="btn btn-primary w-100 mt-3">로그인</button>
+					<button type="button" class="btn btn-primary w-100 mt-3" id="loginBtn">로그인</button>
 					<div class="d-flex justify-content-between m-3">
 						<div>
 							<a href="#" class="text-dark mr-3">아이디 찾기</a>
 							<a href="#" class="text-dark">비밀번호 찾기</a>
 						</div>
 					<div>
-					<a href="#" class="text-dark mr-3">회원가입</a>
+					<a href="/nunubooks/account/sign-up" class="text-dark mr-3">회원가입</a>
 					</div>
 					</div>
 				</div>
@@ -50,7 +50,47 @@
 
 
 
+		
+		<script layout:fragment="script">
+		
+		$(document).ready(function(){
 
-<script layout:fragment="script"></script>
+			$("#loginBtn").on("click",function(){
+
+				let userId = $("#idInput").val();
+				let password = $("#passwordInput").val();
+				
+				if(userId == ""){
+					alert("아이디를 입력하세요");
+					return;
+				}
+				if(password == ""){
+					alert("비밀번호를 입력하세요");
+					return;
+				}
+				
+				
+				$.ajax({
+					type:"post"
+					,url:"/user/login"
+					,data:{"userId":userId,"password":password}
+					,success:function(response){
+						if(response.result == "success"){
+							location.href="/nunubooks/account/main";
+						} else {
+							alert("아이디 혹은 비밀번호를 다시 확인해주세요")
+						}
+					}
+					,error:function(){
+					alert("로그인 오류!!!");
+					}
+				});
+				
+			
+			});
+		});
+		
+		
+		</script>
 
 </html>
