--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -188,8 +188,8 @@
 		
 		$("#passwordConfirm").on("input",function(){ 
 			
-			
-			$("#notsamePw").addClass("d-none");
+			alert("!!");
+			$("#notsamePw").removeClass("d-none");
 		});
 		
 		
