[배지현] - 책 상세 페이지 디자인 구현

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -124,6 +124,11 @@ color: #7CC491;
 	font-size:38px;
 }
 
+.book-image {
+	width:250px;
+	height:340px;
+}
+
 .seller-info{
 	width:600px;
 	height:400px;
