--- a/src/main/resources/templates/books/product.html
+++ b/src/main/resources/templates/books/product.html
@@ -77,10 +77,26 @@
 								</tr>
 								<tr>
 									<th>
-								 		작가명
+								 		쪽수
 									</th>
 									<td> 
-										김솨소
+										104쪽
+									</td>
+								</tr>
+								<tr>
+									<th>
+								 		크기	
+									</th>
+									<td> 
+										기타 규격
+									</td>
+								</tr>
+								<tr>
+									<th>
+								 		제품구성		
+									</th>
+									<td> 
+										단행본
 									</td>
 								</tr>
 							</table>
