--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -8,26 +8,55 @@
 		<section layout:fragment="contents" class="contents ">
 		
 		<!--  리스트 테스트 후 수정예정 -->
-		<table class="table">
-	        <thead>
-	            <tr>
-	                <th>타이틀</th>
-	                <th>저자</th>
-	                <th>출판사</th>
-	                <th>가격</th>
-	                <th>이미지</th>
-	            </tr>
-	        </thead>
-	        <tbody>
-	            <tr th:each="book : ${books}">
-	                <td th:text="${book.title}">Book Title</td>
-	                <td th:text="${book.author}">Author</td>
-	                <td th:text="${book.publisher}">Publisher</td>
-	                <td th:text="${book.priceSales}">0</td>
-	                <td><img th:src="${book.cover}">이미지</td>
-	            </tr>
-	        </tbody>
-   		</table>
+		
+		<div \>
+			<div class="d-flex mr-4 align-items-center justify-content-end my-3">
+				<h6><input type="checkbox"> 전체선택</h6> <!--  체크박스 -->
+				<button type="button" class="btn btn-light btn-outline-secondary mx-1">장바구니</button>
+				<button type="button" class="btn btn-light btn-outline-secondary mx-1"><i class="bi bi-heart"></i></button>
+			</div>
+			
+			<div class="d-flex align-items-center book-info p-2 border" th:each="book : ${books}">
+				<div class="mx-3">
+					<input type="checkbox">
+				</div>
+				<img th:src="${book.cover}">
+				<div class="mx-3">
+					<h5 class="font-weight-bold" th:text="${book.title}">책 제목 어쩌구저쩌구</h5>
+					<h6 th:text="${book.author}">저자</h6>
+					<span>
+					<!-- 
+					<h6 class="text-success" th:text="|${book.salesPoint} %|">(10%)</h6> 
+					 -->
+						<del><span th:text="${book.priceStandard}">정가 </span></del>
+						<span class="font-weight-bold text-primary" th:text="${book.priceSales}">할인가</span>
+					</span>
+				</div>
+				<div class="d-flex align-items-center justify-content-center bg-primary border mx-4">
+					<div>
+						<h6 class="font-weight-bold my-4 text-center">수량</h6>
+						<div class="d-flex align-items-center justify-content-center bg-light border border-secondary">
+							<button type="button" class="btn btn-0">+</button>
+							<div>1</div>
+							<button type="button" class="btn btn-0">-</button>
+						</div>
+					</div>
+				</div>
+				
+				<div>
+					<div class="text-center bg-danger my-3">
+						<button type="button" class="btn btn-0">장바구니</button>
+					</div>
+					<div class="text-center bg-warning my-3">
+						<button type="button" class="btn btn-o">바로구매</button>
+					</div>
+				</div>
+				
+									
+			</div>
+		
+		</div>
+		
 		
 		</section>
 
