--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -9,39 +9,48 @@
 		
 		<!--  리스트 테스트 후 수정예정 -->
 		
-		<div \>
+		<div>
+		<!-- 
+		<div class="d-flex" th:each="search : ${total}">
+			<h6>전체</h6>
+			<h6 th:text="${search.totalResults}">00건</h6>
+		</div>
+		 -->
+		 <div class="d-flex justify-content-between align-items-center mx-3">
+			 <span class="d-flex">
+				<div class="mr-2" th:text="|' ${books.query} ' 검색 결과|">'검색어' 검색 결과  </div>
+				<h5 class="font-weight-bold mr-2">전체</h5>
+				<h5 class="text-success font-weight-bold" th:text="|${books.totalResults} 건|">00건</h5>
+			 </span>
 			<div class="d-flex mr-4 align-items-center justify-content-end my-3">
 				<h6><input type="checkbox"> 전체선택</h6> <!--  체크박스 -->
-				<button type="button" class="btn btn-light btn-outline-secondary mx-1">장바구니</button>
-				<button type="button" class="btn btn-light btn-outline-secondary mx-1"><i class="bi bi-heart"></i></button>
+				<button type="button" class="btn btn-light btn-outline-secondary mx-2">장바구니</button>
+				<button type="button" class="btn btn-light btn-outline-secondary mx-2"><i class="bi bi-heart"></i></button>
 			</div>
+		</div>
 			
-			<div class="d-flex align-items-center book-info p-2 border" th:each="book : ${books}">
+			<div class="d-flex align-items-center book-info p-2 border" th:each="book : ${books.item}">
 				<div class="mx-3">
 					<input type="checkbox">
 				</div>
 				<img th:src="${book.cover}">
 				<div class="mx-3">
 					<h5 class="font-weight-bold" th:text="${book.title}">책 제목 어쩌구저쩌구</h5>
-					<h6 th:text="${book.author}">저자</h6>
-					<span>
+					<h6 th:text="|${book.author}|">저자</h6>
+					<div class="d-flex align-items-center">
+						<h6 th:text="${book.publisher}">출판사</h6>
+						<h6 class= "ml-3" th:text="${book.pubDate}">출판일</h6>
+					</div>
+				</div>
+				<div class="mx-3">
 					<!-- 
 					<h6 class="text-success" th:text="|${book.salesPoint} %|">(10%)</h6> 
 					 -->
-						<del><span th:text="${book.priceStandard}">정가 </span></del>
-						<span class="font-weight-bold text-primary" th:text="${book.priceSales}">할인가</span>
-					</span>
+					<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
+					<span class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</span>
+					<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
 				</div>
-				<div class="d-flex align-items-center justify-content-center bg-primary border mx-4">
-					<div>
-						<h6 class="font-weight-bold my-4 text-center">수량</h6>
-						<div class="d-flex align-items-center justify-content-center bg-light border border-secondary">
-							<button type="button" class="btn btn-0">+</button>
-							<div>1</div>
-							<button type="button" class="btn btn-0">-</button>
-						</div>
-					</div>
-				</div>
+				
 				
 				<div>
 					<div class="text-center bg-danger my-3">
