--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -31,6 +31,38 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+
+	$(document).ready(function(){
+
+		$("#searchBtn").on("click",function(){
+
+			let query =  $("#queryInput").val();
+			
+			$.ajax({
+				type:"get"
+				,url:"/books/search"
+				,data:{"query":query}
+				,success:function(response){
+
+					if(response.result == "success"){
+						location.href="/nunubooks/searchList?query=" + query;
+					} else {
+						alert("검색 실패")
+					}
+				}
+				,error:function(){
+
+				alert("검색 오류!!!!! ")
+				}
+			
+			});
+		
+		});
+		
+	});
+
+</script>
 <th:block layout:fragment="script"></th:block>
 </body>
 </html>
