--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -18,23 +18,38 @@
 		 -->
 		 <div class="d-flex justify-content-between align-items-center mx-3">
 			 <span class="d-flex">
-				<div class="mr-2" th:text="|' ${books.query} ' 검색 결과|">'검색어' 검색 결과  </div>
+				<div class="mr-2" th:if="${books.query !=null}" th:text="|' ${books.query} ' 검색 결과|">'검색어' 검색 결과  </div>
 				<h5 class="font-weight-bold mr-2">전체</h5>
 				<h5 class="text-success font-weight-bold" th:text="|${books.totalResults} 건|">00건</h5>
 			 </span>
+			 
 			<div class="d-flex mr-4 align-items-center justify-content-end my-3">
-				<h6><input type="checkbox"> 전체선택</h6> <!--  체크박스 -->
-				<button type="button" class="btn btn-light btn-outline-secondary mx-2">장바구니</button>
+				<!--  <h6><input type="checkbox"> 전체선택</h6>  체크박스 -->
+				<select class="form-control col-4">
+					<option selected>10개씩 보기</option>
+					<option selected>20개씩 보기</option>
+					<option>50개씩 보기</option>
+					<option>100개씩 보기</option>
+				</select>
+				<button type="button" class="btn btn-light btn-outline-secondary mx-2" id="allSelectBtn">전체선택</button>
+				<button type="button" class="btn btn-light btn-outline-secondary mx-2 cartBtn">장바구니</button>
 				<button type="button" class="btn btn-light btn-outline-secondary mx-2"><i class="bi bi-heart"></i></button>
 			</div>
 		</div>
+		<!-- 
+			<div class="d-flex align-items-center book-info p-2 m-3 justify-content-center"  th:if="${books.query == null}" >
+				<div class="h4 font-weight-bold font-italic"> 검색어를 입력해주세요
+			</div>
+		 -->
 			
-			<div class="d-flex align-items-center book-info p-2 border" th:each="book : ${books.item}">
-				<div class="mx-3">
-					<input type="checkbox">
+			<div class="d-flex align-items-center book-info p-2 border m-3" th:each="book : ${books.item}">
+				<div class="mx-3 info-checkbox">
+				<label>
+					<input type="checkbox" th:value="${book.itemId}" class="item-checkbox">
+				</label>
 				</div>
-				<img th:src="${book.cover}">
-				<div class="mx-3">
+				<img th:src="${book.cover}" class="info-img">
+				<div class="mx-3 info-title">
 					<h5 class="font-weight-bold" th:text="${book.title}">책 제목 어쩌구저쩌구</h5>
 					<h6 th:text="|${book.author}|">저자</h6>
 					<div class="d-flex align-items-center">
@@ -42,7 +57,7 @@
 						<h6 class= "ml-3" th:text="${book.pubDate}">출판일</h6>
 					</div>
 				</div>
-				<div class="mx-3">
+				<div class="mx-3 info-price">
 					<!-- 
 					<h6 class="text-success" th:text="|${book.salesPoint} %|">(10%)</h6> 
 					 -->
@@ -52,23 +67,46 @@
 				</div>
 				
 				
-				<div>
-					<div class="text-center bg-danger my-3">
-						<button type="button" class="btn btn-0">장바구니</button>
+				<div class="info-cart">
+					<div class="text-center my-3">
+						<button type="button" class="btn btn-outline-secondary cartBtn">장바구니</button>
 					</div>
-					<div class="text-center bg-warning my-3">
-						<button type="button" class="btn btn-o">바로구매</button>
+					<div class="text-center my-3">
+						<button type="button" class="btn btn-outline-secondary">바로구매</button>
 					</div>
 				</div>
 				
 									
 			</div>
 		
+		<!--  페이지 넘버 -->
+			<div class="d-flex align-items-center justify-content-center">
+				<div class="pageNum-now">1</div>
+				<div class="pageNum">2</div>
+				<div class="pageNum">3</div>
+				<div><i class="bi bi-three-dots text-secondary"></i></div>
+				<div class="pageNum">10</div>
+			</div>
 		</div>
 		
 		
 		</section>
 
-<script layout:fragment="script"></script>
+<script layout:fragment="script">
+
+	$(document).ready(function(){
+	
+		$(".cartBtn").on("click",function(){
+		let itemId = $(this).data("item-id");
+
+		alert(itemId);
+		
+		});
+	
+		
+	});
+
+
+</script>
 
 </html>
