--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
 			<div class="mt-3 text-right"> <!-- 정보  관리 버튼 -->
 					<a href="/nunubooks/account/login" class="text-dark mr-2">로그인</a>
 					<a href="/nunubooks/account/sign-up" class="text-dark mr-2">회원가입</a>
-					<a href="#" class="text-dark mr-2">장바구니</a>
+					<a href="/nunubooks/cart" class="text-dark mr-2">장바구니</a>
 					<a href="#" class="text-dark mr-2">마이페이지</a>
 					<a href="#" class="text-dark mr-4">고객센터</a>
 			</div>
@@ -12,17 +12,19 @@
 					누누북스
 					</div>
 					<!--  검색버튼 -->
+				<form action="/nunubooks/searchList" method="get">
 					<div>
 						<div class="d-flex search-bar align-items-center border border-dark rounded-pill">
 							<button type="button" class="btn border-0  m-2">
 								<i class="search-icons bi bi-list"></i>
 							</button>
-							<input type="search" class="search-tab form-control border-0" placeholder="이시간 가장 인기있는 도서는?" id="queryInput">
-							<button type="button" class="btn border-0 m-2" id="searchBtn">
+							<input type="search" class="search-tab form-control border-0" placeholder="이시간 가장 인기있는 도서는?" name="query">
+							<button type="submit" class="btn border-0 m-2" id="searchBtn">
 								<i class="search-icons bi bi-search"></i>
 							</button>
 						</div>
-				</div>
+					</div>
+				</form>
 			</div>
 			
 		</header>
