--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -16,16 +16,16 @@
 			<h6 th:text="${search.totalResults}">00건</h6>
 		</div>
 		 -->
-		 <div class="d-flex justify-content-between align-items-center mx-3">
-			 <span class="d-flex">
+		 <div class="d-flex align-items-center justify-content-between mx-3 mt-3">
+			 <div class="d-flex">
 				<div class="mr-2" th:if="${books.query !=null}" th:text="|' ${books.query} ' 검색 결과|">'검색어' 검색 결과  </div>
 				<h5 class="font-weight-bold mr-2">전체</h5>
 				<h5 class="text-success font-weight-bold" th:text="|${books.totalResults} 건|">00건</h5>
-			 </span>
+			 </div>
 			 
-			<div class="d-flex mr-4 align-items-center justify-content-end my-3">
+			<div class="d-flex align-items-center justify-content-end my-3">
 				<!--  <h6><input type="checkbox"> 전체선택</h6>  체크박스 -->
-				<select class="form-control col-4">
+				<select class="form-control col-4 mr-2">
 					<option selected>10개씩 보기</option>
 					<option selected>20개씩 보기</option>
 					<option>50개씩 보기</option>
@@ -97,7 +97,7 @@
 	$(document).ready(function(){
 	
 		$(".cartBtn").on("click",function(){
-		let itemId = $(this).data("item-id");
+		let itemId = $(".item-checkbox").val();
 
 		alert(itemId);
 		
