--- a/src/main/resources/templates/books/product.html
+++ b/src/main/resources/templates/books/product.html
@@ -5,29 +5,32 @@
      layout:decorate="~{layout/default}">
      
 
-		<section layout:fragment="contents" class="contents ">
+		<section layout:fragment="contents" class="contents">
 			
 		
 		
-				<div class="my-4">
+				<div class="my-4" th:with="item =${book.item[0]}">
 					<div class="border-bottom">
-						<h3 class="font-weight-bold">책 제목</h3>
-						<h5>김솨솨(지은이) 어쩌구출판 2025-01-01</h5>
+						<h3 class="font-weight-bold" th:text="${item.title}">책 제목</h3>
+						<span th:text="${item.author}">김솨솨(지은이)</span>
+						<span th:text="${item.publisher}">어쩌구출판</span>
+						<span th:text="${item.pubDate}">2025-01-01</span>
+						
 					</div>
 					
 					<div class="d-flex"> <!--  커버, 가격정보 flex -->
-						<div class="mt-3 mx-3 bg-info book-image"><!-- 책 커버 이미지 -->
-							<img alt="책 제목 표지" src="#">
+						<div class="mt-3 mx-3 bg-info"><!-- 책 커버 이미지 -->
+							<img alt="책 제목 표지" th:src="${item.cover}" class="book-image">
 						</div>
 						<div>
 							<div class="d-flex align-items-center border-bottom"> <!--  가격정보 -->
-								<h3 class="font-weight-bold mx-2">13,500원</h3>
-								<h6><del>18,000원</del></h6>
+								<h3 class="font-weight-bold mx-2" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">13,500원</h3>
+								<del><h6 th:text="|${#numbers.formatInteger(item.priceStandard, 3, 'COMMA')} 원|">18,000원</h6></del>
 								<h5 class="menu-text font-weight-bold mx-2">(10%)</h5>
 							</div>
 							<div class="d-flex align-items-center border-bottom"> <!-- 적립 혜택 -->
 								<h4 class="font-weight-bold mr-3">적립금</h4>
-								<h6 class="menu-text mx-2">720원</h6>
+								<h6 class="menu-text mx-2" th:text="|(${#numbers.formatInteger(item.mileage, 3, 'COMMA')} point)|">720원</h6>
 							</div>
 							<div class="d-flex align-items-center border-bottom"> <!-- 적립 혜택 -->
 								<h4 class="font-weight-bold mr-3">배송안내</h4>
@@ -71,7 +74,7 @@
 									<th> 
 										isbn
 									</th>
-									<td> 
+									<td th:text="${item.isbn13}"> 
 										1234145
 									</td>
 								</tr>
