--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -45,7 +45,7 @@
 			<div class="d-flex align-items-center book-info p-2 border m-3" th:each="book : ${books.item}">
 				<div class="mx-3 info-checkbox">
 				<label>
-					<input type="checkbox" th:value="${book.itemId}" class="item-checkbox">
+					<input type="checkbox" th:data-item-id="${book.itemId}" class="item-checkbox">
 				</label>
 				</div>
 				<img th:src="${book.cover}" class="info-img">
@@ -71,7 +71,7 @@
 				
 				<div class="info-cart">
 					<div class="text-center my-3">
-						<button type="button" class="btn btn-outline-secondary cartBtn">장바구니</button>
+						<button type="button" class="btn btn-outline-secondary cartBtn" th:data-item-id="${book.itemId}">장바구니</button>
 					</div>
 					<div class="text-center my-3">
 						<button type="button" class="btn btn-outline-secondary">바로구매</button>
@@ -99,17 +99,18 @@
 	$(document).ready(function(){
 	
 		$(".cartBtn").on("click",function(){
-		let itemId = $(".item-checkbox").val();
-		let userId = null; 
+		let itemId = $(this).data("item-id");
+		// let userId = null; client를 구분하기 위한 값은 서버에서 처리한다고 생각해주기.
         let quantity = 1;
 
+		alert(itemId);
 // 로그인 안해도 장바구니에 저장될 수 있도록         
         
 		$.ajax({
 
 			type:"post"
 			,url:"/cart/add"
-			,data:{"itemId":itemId,"userId":userId, "quantity":quantity}
+			,data:{"itemId":itemId,"quantity":quantity}
 			,success:function(response){
 
 				if(response.result =="success"){
