--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -45,53 +45,70 @@
 			
 				<div class="d-flex"> <!--  장바구니 정보- 배송정보 가로배치 -->
 				
-					<div class="bg-secondary col-8"> <!--장바구니 정보 전체틀  -->
+					<div class="col-8 border d-flex align-items-center"> <!--장바구니 정보 전체틀  -->
+					<!-- 
 						<div class="bg-warning">
 							<h5 class="font-weight-bold">0000원 더 구매시 무료 배송!</h5>
 						</div>
 						<div class="bg-primary">
 							<h5 class="font-weight-bold">사은품 증정 제품 (0)</h5>
 						</div>
+					 -->
 						
-						<div class="bg-success p-2"> <!-- 책 정보부분 (++++ ) -->
+						<div class="p-2"> <!-- 책 정보부분 (++++ ) -->
+						
+							<button type="button" class="close"> <!--  닫기버튼  -->
+								<span aria-hidden="true">&times;</span>
+							</button>
+							
 							<div class="d-flex align-items-center">
 								<input type="checkbox" class="mx-3">
 								<img src="/static/image/car.jpg" class="cart-book-img">
-								<div class="mx-3">
+								<div class="mx-3"> <!--  책 정보 -->
 									<h5 class="font-weight-bold">책 제목 어쩌구저쩌구</h5>
-									<h6>(10%) 18,000 원 마일리지 얼마얼마</h6>
+									<div class="d-flex">
+									<div>할인율</div>
+									<div>판매가</div>
+									<div>정가</div>
+									<div>point</div>
+									</div>
 								</div>
-								<div class="d-flex align-items-center justify-content-center bg-primary border">
+								<div class="d-flex align-items-center justify-content-center border col-2">
 									<div>
-										<h6 class="font-weight-bold my-4">18,000 원</h6>
-										<div class="d-flex align-items-center justify-content-center bg-light border border-secondary">
-											<button type="button" class="btn btn-0">+</button>
-											<div>1</div>
+										<h6 class="font-weight-bold  text-center my-4">18,000 원</h6>
+										<div class="d-flex align-items-center justify-content-center bg-light border rounded border-secondary">
 											<button type="button" class="btn btn-0">-</button>
+											<div class="mx-1">1</div>
+											<button type="button" class="btn btn-0">+</button>
 										</div>
 									</div>
 								</div>
-								
+							
 								<div>
-									<div class="text-center bg-danger">
-											<div>수령예상일</div>
-											<span>(15시 이전 주문시 +2 일 뒤 몇시 배송 예정)</span>
+									<div class="text-center border-bottom ">
+											<h6>00/00일 출고예정</h6>
+											<!-- 
+											<div>(15시 이전 주문시 +2 일 뒤 몇시 배송 예정)</div>
+											 -->
 									</div>
-									<div class="text-center bg-warning">
+									<div class="text-center">
+											<h6>00시 이후 방문수령 가능</h6>
 										<button type="button" class="btn btn-o">방문수령</button>
 									</div>
 								</div>
-								
 								
 							</div>
 						</div> <!--  책 정보 부분 /div -->
 						
 					</div>
-					<div class="bg-warning col-4"> <!--  구매 정보 박스 -->
+					<div class="col-4"> <!--  구매 정보 박스 -->
 						<div class="bg-danger"> <!--  구매 정보 추가 수정 예정 (했으면 주석 지우기) -->
-						니가 산거 얼마고
-						배송비는 얼마고
-						할인은 이만큼 된다 
+						<table class="border">
+							<tr>
+								<th>상품 금액</th>
+								<td></td>
+							</tr>
+						</table>
 						</div>
 						<div class="bg-info">
 						총 얼마얼마 나옴
