[배지현] - DB에 누락된 name 추가 -  userId -> loginId로 이름 변경 - 이메일 직접입력 value 못받아오던 문제 해결 #3 #1

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -57,10 +57,10 @@
 
 			$("#loginBtn").on("click",function(){
 
-				let userId = $("#idInput").val();
+				let loginId = $("#idInput").val();
 				let password = $("#passwordInput").val();
 				
-				if(userId == ""){
+				if(loginId == ""){
 					alert("아이디를 입력하세요");
 					return;
 				}
@@ -73,7 +73,7 @@
 				$.ajax({
 					type:"post"
 					,url:"/user/login"
-					,data:{"userId":userId,"password":password}
+					,data:{"loginId":loginId,"password":password}
 					,success:function(response){
 						if(response.result == "success"){
 							location.href="/nunubooks/account/main";
