--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -85,12 +85,13 @@
 								<span>@</span>
 								<input type="text" class="form-control d-none" id="fillEmail">
 								<select class="form-control text-center" id="domainSel">
-									<option selected value="1">직접입력</option>
+	                                <option selected value="1">이메일 선택</option>
 	                                <option value="naver.com">naver.com</option>
 	                                <option value="gmail.com">gmail.com</option>
 	                                <option value="nate.com">nate.com</option>
 	                                <option value="hanmail.net">hanmail.net</option>
 	                                <option value="daum.net">daum.net</option>
+									<option value="self-domain">직접입력</option>
 								</select>
 							</td>
 						</tr>
@@ -197,12 +198,12 @@
 		$("#dupBtn").on("click",function(){
 
 			
-			let userId = $("#idInput").val();
+			let loginId = $("#idInput").val();
 			
 			$.ajax({
 				type:"get"
 				,url:"/user/duplicate-id"
-				,data:{"userId":userId}
+				,data:{"loginId":loginId}
 				,success:function(response){
 
 					isDuplicateCheck = true; // 중복확인을 했다 
@@ -289,21 +290,26 @@
 		
 		 $("#domainSel").on("change",function(){
              // alert();
-            let select= $(this).val();
-            //alert(select);
-             if(select == "1") {
+            let select = $(this).val();
+           
+             if(select == "self-domain") {
                  $("#fillEmail").removeClass("d-none");      
                  $("#domainSel").addClass("d-none");
+                 select = $("#fillEmail").val();
              }
 
+             
          });
 
+		$("#prevBtn").on("click",function(){
+			alert(select);
+		});
 		
 		$("#signUpBtn").on("click",function(){
 
 			
 			let name = $("#nameInput").val();
-			let userId = $("#idInput").val();
+			let loginId = $("#idInput").val();
 			let emailId = $("#emailInput").val();
 			let password = $("#passwordInput").val();
 			let passwordConfirm = $("#passwordConfirmInput").val();
@@ -318,15 +324,27 @@
 			let phoneNumber3 = $("#phoneInput3").val();
 			
 			let domain = "@" + $("#domainSel").val();
+			if ($("#domainSel").val() === "self-domain") {
+				let selfFill = $("#fillEmail").val();
+				if(selfFill.trim() === ""){
+					 alert("이메일을 직접 입력해 주세요.");
+					 return;
+				}
+				
+			    domain = "@" +selfFill;
+			}
+			
+//			let selfDomain = "@" + $("#fillEmail").val();
+//				 if (selfDomain != null ) { 
+//	                 domain = selfDomain;
+//	             } 
 			
 			let email = emailId + domain;
+
 			let phoneNumber = phoneNumber1 + "-" + phoneNumber2 + "-" + phoneNumber3;
 			let address = addr+ " " + detailAddr;
 			
-			 if (domain == "fillEmail") { 
-                 domain = $("#fillEmail").val() ;
-             }
-
+//			console.log(email);  
 			
 			
 			//alert(phoneNumber);
@@ -336,12 +354,12 @@
 				return;
 			}
 				
-			if(userId ==""){
+			if(loginId ==""){
 				alert("아이디를 입력해주세요");
 				return;
 			}
 				
-			if(email ==""){
+			if(emailId ==""){
 				alert("이메일을 입력해주세요");
 				return;
 			}
@@ -366,7 +384,7 @@
 
 			type:"post"
 			,url:"/user/sign-up"
-			,data:{"name":name,"userId":userId,"email":email,"password":password,"postcode":postcode,"address":address,"phoneNumber":phoneNumber}
+			,data:{"loginId":loginId,"name":name,"email":email,"password":password,"postcode":postcode,"address":address,"phoneNumber":phoneNumber}
 			,success:function(response){
 	
 				if(response.result == "success"){
