[배지현] -로그인시 우측 상단에 회원정보 표시기능 - 로그아웃 기능 추가 완료 #2

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
 			<div class="mt-3 text-right d-flex justify-content-end"> <!-- 정보  관리 버튼 -->
 			<div class="mr-2" th:if="${session.userId != null }">
 				<span th:text="|${session.userName} 님 |" class="font-weight-bold">김뫄뫄님</span> 
-			<a href="/user/logout" class="text-dark">로그아웃</a></div>
+			<a href="/nunubooks/account/logout" class="text-dark">로그아웃</a></div>
 				<div th:unless="${session.userId != null }">
 					<a href="/nunubooks/account/login" class="text-dark mr-2">로그인</a>
 					<a href="/nunubooks/account/sign-up" class="text-dark mr-2">회원가입</a>
