--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -103,7 +103,7 @@
 		// let userId = null; client를 구분하기 위한 값은 서버에서 처리한다고 생각해주기.
         let quantity = 1;
 
-		alert(itemId);
+//		alert(itemId);
 // 로그인 안해도 장바구니에 저장될 수 있도록         
         
 		$.ajax({
