[배지현] - 장바구니 레이아웃 점검중 - itemId 기반으로 조회해오는 Service 완성시키는 중 #9

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -151,6 +151,17 @@ color: #7CC491;
 }
 
 
+.cart-box{
+	width:900px;
+	height:150px;
+}
+
+.cart-title{
+	width:400px;
+}
+.cart-price{
+	width:100px;
+}
 .cart-book-img{
 	width:90px;
 	height:120px;
