--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -6,7 +6,8 @@
      
 
 		<section layout:fragment="contents" class="container">
-			<div width="1200" class=" contents">
+			<div class=" contents">
+			<div>
 				<div  class="d-flex justify-content-between p-2 mt-4">
 					<h2 class="font-weight-bold" th:text="|장바구니 (${cartCount})|">장바구니(0)</h2>
 					
@@ -42,10 +43,44 @@
 						<button type="button" class="btn btn-light btn-outline-secondary mr-1">구매 이력 확인</button>
 					</div>
 				</div>
+			</div>
 			
-				<div class="d-flex" th:each="cart:${cartList}"> <!--  장바구니 정보- 배송정보 가로배치 -->
-				
-					<div class="col-8 border d-flex align-items-center"> <!--장바구니 정보 전체틀  -->
+			 <!--  장바구니 정보- 배송정보 -->
+			<div class="d-flex">
+			<div class="d-flex justify-content-end bg-warning"> <!--  구매 정보 박스 -->
+				<div class="col-3 border p-3"> <!--  구매 정보 박스 -->
+					<div> <!--  구매 정보 추가 수정 예정 (했으면 주석 지우기) -->
+						<table class="table table-borderless">
+							<tr>
+								<th>상품 금액</th>
+								<td>0000원</td>
+							</tr>
+							<tr>
+								<th>배송비</th>
+								<td>0000원</td>
+							</tr>
+							<tr>
+								<th>상품 할인</th>
+								<td>0000원</td>
+							</tr>
+							<tr class=" border-top">
+								<th>결제 예정 금액</th>
+								<td>0000원</td>
+							</tr>
+							<tr>
+								<th>적립 예정 포인트</th>
+								<td>000 point</td>
+							</tr>
+						</table>
+					</div>
+					<button type="button" class="btn btn-primary my-3 w-100">구매하기</button>
+					<button type="button" class="btn btn-primary my-3 w-100">수령 매장 선택</button>
+				</div>
+			</div>	
+			<div>
+			
+				<div th:each="cart:${cartList}"> <!-- 책 정보부분 (++++ ) -->
+					<div class="border cart-box p-2"> <!--장바구니 정보 전체틀  -->
 					<!-- 
 						<div class="bg-warning">
 							<h5 class="font-weight-bold">0000원 더 구매시 무료 배송!</h5>
@@ -55,24 +90,27 @@
 						</div>
 					 -->
 						
-						<div class="p-2"> <!-- 책 정보부분 (++++ ) -->
-								<button type="button" class="close"> <!--  닫기버튼  -->
+						<div class="p-2 "> <!-- 책 정보부분 (++++ ) -->
+							<div><!--  닫기버튼  -->
+								<button type="button" class="close"> 
 									<span aria-hidden="true">&times;</span>
 								</button>
-							
+							</div>
 							<div class="d-flex align-items-center">
-								<input type="checkbox" class="mx-3">
+								<div class="info-checkbox mx-2">
+									<input type="checkbox" class="mx-3">
+								</div>
 								<img src="/static/image/car.jpg" class="cart-book-img">
-								<div class="mx-3"> <!--  책 정보 -->
-									<h5 class="font-weight-bold">책 제목 어쩌구저쩌구</h5>
-									<div class="d-flex">
-									<div>할인율</div>
-									<div>판매가</div>
-									<div>정가</div>
-									<div>point</div>
+								<div class="mx-3 cart-title"> <!--  책 정보 -->
+									<h5 class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구</h5>
+									<div class="d-flex mt-2">
+										<div class="text-success font-weight-bold mr-2">할인율</div>
+										<del><div>정가</div></del>
+										<div class="font-weight-bold mx-1">판매가</div>
+										<div>point</div>
 									</div>
 								</div>
-								<div class="d-flex align-items-center justify-content-center border col-2">
+								<div class="d-flex align-items-center justify-content-center border cart-price">
 									<div>
 										<h6 class="font-weight-bold  text-center my-4">18,000 원</h6>
 										<div class="d-flex align-items-center justify-content-center bg-light border rounded border-secondary">
@@ -100,24 +138,11 @@
 						</div> <!--  책 정보 부분 /div -->
 						
 					</div>
-					<div class="col-4"> <!--  구매 정보 박스 -->
-						<div class="bg-danger"> <!--  구매 정보 추가 수정 예정 (했으면 주석 지우기) -->
-						<table class="border">
-							<tr>
-								<th>상품 금액</th>
-								<td></td>
-							</tr>
-						</table>
-						</div>
-						<div class="bg-info">
-						총 얼마얼마 나옴
-						포인트는 얼마얼마 들어갈거임
-						</div>
-					<button type="button" class="btn btn-primary mt-4 col-10">구매하기</button>
-					<button type="button" class="btn btn-primary col-10 mt-4">수령 매장 선택</button>
-					</div>
-					
 				</div>
+			</div>
+		</div>
+					
+					
 					<button type="button" class="btn btn-info col-8 mt-4">더 고르러 가기</button>
 			
 			
